modules/docker/k8s/Files/YML/pro/httpd/04-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: apache
    namespace: proves
spec:
  selector:
    matchLabels:
      application: apache
      entorn: pro
      tecnologia: apache
      tier: frontal
  template:
    metadata:
      labels:
        application: apache
        entorn: pro
        tecnologia: apache
        tier: frontal
    spec:
      affinity: {}
      containers:
      - image: httpd
        imagePullPolicy: Always
        name: apache
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 128Mi
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs
          name: apache
      volumes:
      - name: apache
        persistentVolumeClaim:
          claimName: apache
      - name: vol-rzxxk
        persistentVolumeClaim:
          claimName: apache
