modules/docker/k8s/Files/YML/pro/httpd/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache
  namespace: proves
spec:
  defaultBackend:
    service:
      name: apache
      port:
        number: 80
  rules:
  - host: apache.$domain_stg_ba
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: Prefix
